feat: add new name

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
          crossorigin="anonymous"
       />
       <link rel="stylesheet" href="style.css" />
-      <title>Fomulário de Login</title>
+      <title>Formulário de Login</title>
    </head>
    <body class="bg-body-tertiary py-4 d-flex align-items-center">
       <main class="w-100 m-auto container">
